# lazy_workspace

./: README.md
algorithm/: LCS.py  ann.py  anndemo.json  anndemo.py  bp.py  fetchercode-d.py  fetchercode.py  ganzhiji.py  genetic.py  line_regular.py
bigdata-dp/CoordinateConverter/: CoordTransferTool.py  CoordinateConverter.php  CoordinateConverter.py
bigdata-dp/PointInPolygon/: city_list.py  pointInPolygonTool.py
bigdata-dp/communication_demo/: CMakeLists.txt
bigdata-dp/communication_demo/src/client/: client_demo.cpp
bigdata-dp/communication_demo/src/server/: server_demo.cpp
bigdata-dp/push_sdk/src/: didi_protocol.pb.cc  didi_protocol.proto  didi_protocol_collectsvr.pb.cc  didi_protocol_collectsvr.pb.h  didi_protocol_collectsvr.proto  didi_protocol_pushsvr.proto
bigdata-dp/push_sdk/trunk/: README.md  crypto.cpp  didi_protocol_common.proto  didi_protocol_helper.h  push_connector.cpp  push_connector.h  testcli.cpp  testserver.cpp
bigdata-dp/trajs_staticstic/: trajs_staticstic_mapper.py
bigdata-dp/tutorial-src/: CMakeLists.txt
bigdata-dp/tutorial-src/client/: tutorial_client.cpp
bigdata-dp/tutorial-src/service/: tutorial_service.cpp
bigdata-dp/tutorial-thrift/: CMakeLists.txt  shared.thrift  tutorial.thrift
cd-muduo/: CMakeLists.txt
cd-muduo/conf/: log4cplus.cfg  service.cfg
cd-muduo/src/: cd_buffer.cpp  cd_filter.cpp  cd_sender.cpp  cd_sender.h  cd_service.cpp  serverpool_conhash.cpp  serverpool_conhash.h
cd-muduo/src/service/: cd_buffer.h  cd_config.cpp  cd_config.h  cd_filter.h  cd_service.cpp  kd_dd_protocol.pb.cc  kd_dd_protocol.pb.h  kd_dd_protocol.proto  serverpool_conhash.cpp
cd-muduo/third/push_sdk/src/: Makefile  didi_protocol.pb.h  didi_protocol_dispatchsvr.proto  didi_protocol_helper.cpp  didi_protocol_im.proto
cd-muduo/third/push_sdk/trunk/: crypto.h  didi_protocol_common.pb.cc  didi_protocol_common.pb.h
docker/: start-cluster.sh  stop-cluster.sh
platform/: mk_project.sh
platform/btrace-script/: CaseObject.java  CaseObjectMain.java  FSNameSpaceTracingScript.java  TracingScript.java
platform/codedemo/: ConsumerTest.java  FlumeDemo.java  HbaseDemo.java  JedisDemo.java  MysqlDemo.java  ProducerTest.java  SeDeExam.java  StormClient.java  TestRegex.java  TopologyMain.java  WordCounter.java  WordNormalizer.java  WordReader.java  Writable.java  kafkaSink.java  region.rb
platform/conf/: capacity-scheduler.xml  capacity-scheduler.xml1  core-site.xml  hadoop-env.sh  hdfs-site.xml  log4j.properties  mapred-site.xml  slaves  yarn-env.sh  yarn-site.xml
platform/hadoopsh/: create_partition.sh  hdp_reload_conf.sh
platform/hdpjobclient-2.2.0/: HdpJobClient.java  HdpJobClient.sh  log4j.properties
platform/hive-m/: hive_table.hql
platform/hivedevelop/: GetPartition.java  GetPath.java  compile
platform/mail/: jmail.xml
platform/php2hive/: README.txt
platform/php2hive/transport/: TSocket.php
platform/pigdevelop/: CustomLoader.java  compile
platform/py2hive/: finance_report.sh
platform/py2hive/conf/: conf.py
platform/py2hive/plugins/: __init__.py  uaat.hql  uaat.py
platform/sqoop-jobs/: create_increment_append_sqoop_job.sh  driver_account_sqoop_import.sh  driver_sqoop_import.sh  driver_transaction_sqoop_import.p100.sh  driver_transaction_sqoop_import.sh  h2city_sqoop_import.sh  login.sh  newstatinfo_sqoop_import.sh  ods_log_partitioned  order_comment_sqoop_import.sh.bak  order_sqoop_import.bak  order_sqoop_import.debug.sh  order_sqoop_import.sh  order_stat_sqoop_import.sh  passenger_account_sqoop_import.sh  passenger_transaction_sqoop_import.p100.sh  prefer_driver_sqoop_import.sh  r_bind_relation_sqoop_import.sh  r_item_info_sqoop_import.sh  r_list_info_sqoop_import.sh  spam_order_sqoop_import.sh  sqoop_crontab_task  sqoopjobs-env.sh  sqoopvt.sh  stat_passenger_sqoop_import.sh  stat_passenger_sqoop_import.sh.bak  staticstic_driver_sqoop_import.sh  weixin_sqoop_crontab_task
platform/sqoop-jobs/bak/: city_sqoop_import.sh  create_increment_append_sqoop_job.sh  didi_transaction_sqoop_import.sh  driver_sqoop_import.test.sh  history_reload  order_comment_sqoop_import.sh  passenger_account_sqoop_import.sh  passenger_sqoop_import.sh  passenger_transaction_sqoop_import.sh  r_openid_amount_sqoop_import.sh  recommend_sqoop_import.sh  runHisJob.sh  stat_preorder_sqoop_job.sh  weixin_sqoop_crontab_task
platform/sqoop-jobs/etc/: mysql.conf  mysql.conf.red_coupon  mysql.conf.transaction.bak  mysql_transaction.conf
platform/sqoop-jobs/export/: check_record_cnt.sh  genconf.sh  genconf.stgdata.sh  genconf.t.sh  get_mart_createtable_sql.sh  get_stgdata_createtable_sql.sh  mart_create_table.sql  runHisJob.sh  runlog  sqoop-export.sh  sqoop-stgdata-export.sh  stgdata.runlog  stgdata_create_table.sql  test.sh
platform/sqoop-jobs/gulfstream/: audit_daily_trans_sqoop_import.sh  audit_display_part_sqoop_import.sh  audit_display_sqoop_import.sh  audit_wxpay_bill_sqoop_import.sh  d_didibill_part_sqoop_import.sh  d_didibill_sqoop_import.sh  d_discount_bill_sqoop_import.sh  d_refund_didibill_part_sqoop_import.sh  d_refund_didibill_sqoop_import.sh  d_weixin_pay_sqoop_import.sh  g_address_sqoop_import.sh  g_bank_info_sqoop_import.sh  g_bd_sqoop_import.sh  g_car_ext_sqoop_import.sh  g_car_license_sqoop_import.sh  g_car_sqoop_import.sh  g_comment_complaint_sqoop_import.sh  g_company_sqoop_import.sh  g_confirm_code_sqoop_import.sh  g_dict_sqoop_import.sh  g_driver_appversion_sqoop_import.sh  g_driver_car_rel_sqoop_import.sh  g_driver_extra_sqoop_import.sh  g_driver_idcard_sqoop_import.sh  g_driver_license_sqoop_import.sh  g_driver_punish_sqoop_import.sh  g_driver_sqoop_import.sh  g_fee_dissent_sqoop_import.sh  g_invoice_sqoop_import.sh  g_log_sqoop_import.sh  g_order_log_sqoop_import.sh  g_order_operation_sqoop_import.sh  (+31 more)
platform/sqoop-m/: TextExportMapper.java  TextImportMapper.java
platform/sqoopdevelop/: SqlManager.java  compile
platform/stormcode/: StormClient.java  storm-cluster.sh  storm-daemon.sh  storm.xml  stormClient.sh
rmlogtopology/: RMLogAggr.java  RMLogReader.java  RMLogToDB.java  RMLogTopologyMain.java  compile  run.sh
(+385 files in other folders)
